Merge SampleIdentifier and SampleIdentifierUtil into new SampleIdentifiers Replace SampleIdentifier with a String Replace VariantEvaluation.sampleGenotypes with SampleGenotypes class